Fix navigation on mobile

--- a/assets/scss/_colors.scss
+++ b/assets/scss/_colors.scss
@@ -29,7 +29,7 @@ $topbar-height: 80px;
 // $topbar-margin-bottom: 0;
 
 // Style the top bar dropdown elements
-$topbar-dropdown-bg: $regard-green;
+$topbar-dropdown-bg: $white;
 $topbar-dropdown-link-color: $black;
 $topbar-dropdown-link-bg: $regard-green;
 $topbar-dropdown-toggle-color: $black;
@@ -38,3 +38,4 @@ $topbar-dropdown-toggle-alpha: 0.4;
 $topbar-link-color: $black;
 $topbar-link-color-hover: $black;
 $topbar-link-bg-hover: $grey;
+$topbar-menu-icon-color: $black;
